--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,13 @@
       name="description"
       content="Seffih Fadi Portfolio - Web Developer & Computer Science Student"
     />
+
+    <meta property="og:title" content="Seffih Fadi Portfolio">
+    <meta property="og:type" content="portfolio" />
+    <meta property="og:description" content="Seffih Fadi Portfolio - Web Developer & Computer Science Student">
+    <meta property="og:image" content="../src/assets/imgs/web.png">
+    <meta property="og:url" content="http://seffih-portfolio.netlify.app">
+
     <title>Portfolio &bullet; Seffih Fadi</title>
   </head>
   <body dir="ltr">
