--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,15 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/fav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Seffih Fadi Portfolio - Web Developer & Computer Science Student"
-    />
 
     <meta property="og:title" content="Seffih Fadi Portfolio">
     <meta property="og:type" content="portfolio" />
     <meta property="og:description" content="Seffih Fadi Portfolio - Web Developer & Computer Science Student">
-    <meta property="og:image" content="../src/assets/imgs/web.png">
+    <meta property="og:image" content="https://cdn.sanity.io/images/001mdg4o/production/f8fe60b01e106b1a90992b0d853bd7f3f0571924-3430x2287.png">
     <meta property="og:url" content="http://seffih-portfolio.netlify.app">
 
     <title>Portfolio &bullet; Seffih Fadi</title>
